--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Outfit:wght@100..900&display=swap');
 
-
 *{
     font-family: outfit;
 }
 
 .slider{
     -webkit-appearance: none;
+    appearance: none; /* Add this line */
     height: 100%;
     background: transparent;
 }
