--- a/client/src/styles/Steps.css
+++ b/client/src/styles/Steps.css
@@ -1,7 +1,7 @@
 /* Main Container */
 .steps-container {
     margin: 0 1rem;
-    padding: 5rem 0;
+    padding: 2rem 0;
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -11,7 +11,7 @@
     .steps-container {
         margin: 0 auto;
         max-width: 1100px;
-        padding: 5rem 0;
+        padding: 2rem 0;
     }
 }
 
@@ -52,6 +52,7 @@
     font-size: 1.75rem;
     font-weight: 700;
     background: linear-gradient(to right, #007bff, #ff00ff);
+    background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     text-transform: uppercase;
