--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 150px;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 20px;
 }
