--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     flex-wrap: wrap-reverse;
     gap: 5rem;
-    padding: 1rem 1rem;
+    padding: 1rem;
     margin-top: 5rem;
     max-width: 1100px;
     margin-left: auto;
@@ -13,6 +13,7 @@
 
 .header-left {
     max-width: 550px;
+    flex: 1;
 }
 
 .header-left h1 {
@@ -32,7 +33,7 @@
 .header-description {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    font-size: 13px;
+    font-size: 1rem;
     color: #6b7280;
 }
 
@@ -60,21 +61,57 @@
 .header-right {
     width: 100%;
     max-width: 430px;
+    flex: 1;
 }
 
 .header-right img {
     width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
-/* Responsive Design */
+/* Responsive Design for Tablets and Mobiles */
+@media (max-width: 1024px) {
+    .header-left h1 {
+        font-size: 2.5rem;
+    }
+}
+
 @media (max-width: 768px) {
     .header-container {
         flex-direction: column-reverse;
         gap: 2rem;
         text-align: center;
+        padding: 1rem;
+    }
+
+    .header-left h1 {
+        font-size: 2rem;
+    }
+
+    .upload-btn {
+        margin: 0 auto;
     }
 
     .hide-on-mobile {
         display: none;
+    }
+
+    .header-description {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header-left h1 {
+        font-size: 1.7rem;
+    }
+
+    .upload-btn {
+        padding: 0.4rem 1.5rem;
+    }
+
+    .upload-btn p {
+        font-size: 13px;
     }
 }
